/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package jdesechosfabrica.Constantes;

/**
 *
 * @author HP
 */
public enum TipoConstituyente {
        MATERIAL_CONTAMINADO,
        DISOLVENTE_HALOGENADO,
        DISOLVENTE_NO_HALOGENADO,
        ACIDO,
        BASE,
        METAL_PESADO,
        COMPUESTO_ORGANICO
}
