/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package jdesechosfabrica.Constantes;

/**
 *
 * @author HP
 */
public enum TipoDestino {
    PLANTA_RECICLAJE,
    PLANTA_DE_TRATAMIENTO_FISICO_QUIMCO,
    PLANTA_INCINERADORA,
    ALMACEN_TEMPORAL,
    CEMENTERA,
    VERTEDERO_DE_SEGURiDAD,
    DESTINO_INTERNACIONAL
}
