/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package jdesechosfabrica.Constantes;

/**
 *
 * @author HP
 */
public enum TipoResiduo {
        CORROSIVO,
        REACTIVO,
        EXPLOSIVO,
        TOXICO,
        INFLAMABLE,
        INFECCIOSO,
        RADIACTIVO,
}
