@startuml
class Productor{
    - String id
    - String nombre
    - Direccion direccion
    - List<Residuo> residuos;
    - String TipoActividad
    
    + void producirResiduo(Residuo residuo);
    + Residuo getResiduo(string id); 
}

class Direccion{
    - String pais;
    - String ciudad;
    - String calle;
    - String numero;
}

enum TipoResiduo{
    CORROSIVO
    REACTIVO
    EXPLOSIVO
    TOXICO
    INFLAMABLE
    INFECCIOSO
    RADIACTIVO
}

class Residuo{
    - String  id
    - TipoResiduo tipoResiduo;
    - double cantidadTotalKilos;
    - List<Constituyente> constituyentes;
    - Date FechaGeneracion;
    - Envase envase;
    - Productor productor;
    - Translado traslado;
    - TratamientoPosterior tratamientoPosterior;
    - boolean huboIncidenteSeguridad
}
enum TipoConstituyente{
    MATERIAL_CONTAMINADO
    DISOLVENTE_HALOGENADO
    DISOLVENTE_NO_HALOGENADO
    ACIDO
    BASE
    METAL_PESADO
    COMPUESTO_ORGANICO
}


class ConstituyenteQuimico{
    - String id;
    - TipoConstituyente tipoConstituyente
    - String nombre
    - List<Residuo> residuos 
}

enum TipoEnvase{
    CAJA,
    RECIPIENTE,
    BALDE,
    BOLSA
}

enum EstadoUso{
    NUEVO
    EN_USO
    DESECHADO
}

class Envase{
    - String id
    - TipoEnvase tipoEnvase;
    - EstadoUso estadoUso;
    - Residuo residuo;
}

class Transportista{
    - String id
    - String nombre;
    - Traslado traslado;
    - List<MedioTransporte> mediosDeTrasporte
}

enum TipoTratamiento{
    FISICO,
    QUIMICO,
    BIOLOGICO,
    TERMICO
}

class TratamientoPosterior{
    - String id
    - TipoTratamiento tipoTratamiento;
    - Date fechaTratamiento;
    - Residuo residuo;
}

enum TipoTraslado{
TOTAL
PARCIAL
NO_TRANSLADADOS
}

class Traslado{
    - String id
    - Date fechaTranslado
    - TipoTraslado tipoTraslado;
    - boolean transladoSeguro;
    - int cantidad;
    - List<Transportista> transportistas;
    - Residuo residuo
    - Destino destno
}

enum TipoDestino {
  PLANTA_RECICLAJE
  PLANTA_DE_TRATAMIENTO_FISICO_QUIMCO
  PLANTA_INCINERADORA
  ALMACEN_TEMPORAL
  CEMENTERA
  VERTEDERO_DE_SEGURiDAD
  DESTINO_INTERNACIONAL
}

class Destino{
    - String id
    - TipoDestino tipoDestino
    - Date fechaLLegada
    - Direccion direcionDestino
}

enum TipoTransporte {
    MARITIMO
    FERROVIARIO
    TERRESTRE
    AEREO
}

class MedioTransporte{
    - String id
    - String nombre;
    - TipoTransporte tipo
    - double distancia
    - double coste 
    - Transportista transportista
}

Productor "1" -- "*" Residuo : Generar
Residuo "1" -- "1" Traslado : Transportar
Traslado "1" -- "*" Transportista : Participan
Transportista "1" -- "*" MedioTransporte : Usa
Residuo "*"  -- "*" ConstituyenteQuimico : Esta compuesto
Residuo "1" -- "1" Envase : Tiene
Residuo "1" -- "1" TratamientoPosterior : Recibe 
Productor "1" -- "1" Direccion : Tiene 
Traslado "1" -- "1" Destino : Se dirige hacia
Destino "1" -- "1" Direccion : Tiene
@enduml
